@@ -115,7 +115,7 @@ struct Ban
 extern dlink_list global_channel_list;
 
 extern int check_channel_name(const char *, const int);
-extern int can_send(struct Channel *, struct Client *, struct Membership *);
+extern int can_send(struct Channel *, struct Client *, struct Membership *, const char *);
 extern int is_banned(const struct Channel *, const struct Client *);
 extern int can_join(struct Client *, struct Channel *, const char *);
 extern int has_member_flags(const struct Membership *, const unsigned int);
