@@ -180,6 +180,7 @@ extern const char *form_str(unsigned int);
 #define ERR_TOOMANYCHANNELS  405
 #define ERR_WASNOSUCHNICK    406
 #define ERR_TOOMANYTARGETS   407
+#define ERR_NOCTRLSONCHAN    408
 #define ERR_NOORIGIN         409
 #define ERR_INVALIDCAPCMD    410
 
