@@ -31,7 +31,7 @@ static const char *replies[] = {
 /* 001 RPL_WELCOME */ ":%s 001 %s :Welcome to the %s Internet Relay Chat Network %s!%s@%s",
 /* 002 RPL_YOURHOST */ ":%s 002 %s :Your host is %s, running version %s",
 /* 003 RPL_CREATED */ ":%s 003 %s :This server was created %s",
-/* 004 RPL_MYINFO */ ":%s 004 %s %s %s %s biklmnoprstveIORS bkloveI",
+/* 004 RPL_MYINFO */ ":%s 004 %s %s %s %s bciklmnoprstveIORS bkloveI",
 /* 005 RPL_ISUPPORT */ ":%s 005 %s %s :are supported by this server",
 /* 006 */ NULL,
 /* 007 */ NULL,
@@ -435,7 +435,7 @@ static const char *replies[] = {
 /* 405 ERR_TOOMANYCHANNELS */ ":%s 405 %s %s :You have joined too many channels",
 /* 406 ERR_WASNOSUCHNICK */ ":%s 406 %s %s :There was no such nickname",
 /* 407 ERR_TOOMANYTARGETS */ ":%s 407 %s %s :Too many recipients. Only %d processed",
-/* 408 */ NULL,
+/* 408 ERR_NOCTRLSONCHAN*/ ":%s 408 %s %s :You cannot use control codes on this channel. Not sent: %s",
 /* 409 ERR_NOORIGIN */ ":%s 409 %s :No origin specified",
 /* 410 ERR_INVALIDCAPCMD */ ":%s 410 %s %s :Invalid CAP subcommand",
 /* 411 ERR_NORECIPIENT */ ":%s 411 %s :No recipient given (%s)",
